// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders correctly 1`] = `
<div>
  <Header />
  <main
    className="container is-fluid"
  >
    <span>
      Child
    </span>
  </main>
</div>
`;

exports[`Layout renders correctly when it's compact 1`] = `
<div>
  <Header />
  <main
    className="container is-fluid is-compact"
  >
    <span>
      Child
    </span>
  </main>
</div>
`;
